Fix text alignment in chrome

--- a/visualization-frontend/src/components/App.css
+++ b/visualization-frontend/src/components/App.css
@@ -29,6 +29,10 @@ main > .upload-info {
   color: #343539;
 }
 
+main > .upload-info > span  {
+  margin-left: auto;
+}
+
 main > .slider-placeholder {
   margin-top: 0.5rem;
   height: 2rem;
